--- a/client/web/pinochle/app/styles/utils.css
+++ b/client/web/pinochle/app/styles/utils.css
@@ -15,6 +15,8 @@
 .fill {
   width: 100%;
   height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .space-between {
